--- a/Task1_Portfolio/Views/CV/Contact.cshtml
+++ b/Task1_Portfolio/Views/CV/Contact.cshtml
@@ -9,7 +9,7 @@
     <ol>Phone: 01993830224</ol>
     <ol>Current Address: Dhaka, Bangladesh</ol>
     <ol>Parmanent address: Singair manikgonj</ol>
-    <ol>Email: rh140025@gmail.com</ol>
+    <ol>Email: rh140025@gmail.com/rh140025@outollk.com</ol>
 
 </body>
 </html>
